--- a/config/boards/shields/fruitbargb/fruitbargb.conf
+++ b/config/boards/shields/fruitbargb/fruitbargb.conf
@@ -2,3 +2,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_IDLE_TIMEOUT=60000
+CONFIG_ZMK_EXT_POWER=y
